--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 500;
   color: var(--accent);
